# defmt-codesize-bench

./: Cargo.toml  README.md  probe-run.sh
.cargo/: config
src/: rtt.rs  rtt_1_original.rs  rtt_2_nowrite.rs  rtt_3_noacquire.rs  rtt_4_rzcobs.rs  rtt_4_rzcobs_singleptr.rs
